# ninja-extended

./: CMakeLists.txt  README.md  build.sh
src/: background_processor.cc  background_processor.h  build.cc  build.h  client.cc  client.h  comms.cc  comms.h  communicator.cc  communicator.h  daemon.cc  daemon.h  file_monitor.cc  file_monitor.h  graph.cc  graph.h  iprocessor.h  manifest_parser.cc  messages.proto  ninja.cc  processor.cc  processor.h  state.cc  state.h
